--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -10,7 +10,7 @@
 @online{dwave_samplers,
 	author = {D-Wave},
 	title = {{dwave-samplers}},
-	url = {https://docs.dwavequantum.com/en/latest/ocean/api_ref_samplers/},
+	url = {https://docs.dwavequantum.com/en/latest/ocean/api_ref_samplers},
 	urldate = {2025-04-18},
 }
 
@@ -25,7 +25,7 @@
 @online{dwave_leap,
 	author = {D-Wave},
 	title = {The {Leap} {Quantum} {Cloud} {Service}},
-	url = {https://www.dwavequantum.com/solutions-and-products/cloud-platform/},
+	url = {https://www.dwavequantum.com/solutions-and-products/cloud-platform},
 	urldate = {2025-04-18},
 }
 
@@ -164,14 +164,14 @@
 @online{nasa_golden_2024,
 	author = {{NASA} Science},
 	title = {Golden {Record} {Sounds} and {Music}},
-	url = {https://science.nasa.gov/mission/voyager/golden-record-contents/sounds/},
+	url = {https://science.nasa.gov/mission/voyager/golden-record-contents/sounds},
 	urldate = {2025-04-17},
 }
 
 @article{finley_quantum_2017,
 	title = {Quantum {Computing} {Is} {Real}, and {D}-{Wave} {Just} {Open}-{Sourced} {It}},
 	issn = {1059-1028},
-	url = {https://www.wired.com/2017/01/d-wave-turns-open-source-democratize-quantum-computing/},
+	url = {https://www.wired.com/2017/01/d-wave-turns-open-source-democratize-quantum-computing},
 	urldate = {2025-04-17},
 	journal = {Wired},
 	author = {Finley, Klint},
@@ -466,14 +466,14 @@
 @online{google,
 	author = {Google},
 	title = {Google {Quantum} {AI}},
-	url = {https://quantumai.google/},
+	url = {https://quantumai.google},
 	urldate = {2025-01-12},
 }
 
 @online{ibm,
 	author = {IBM},
 	title = {{IBM} {Quantum} {Computing}},
-	url = {https://www.ibm.com/quantum/},
+	url = {https://www.ibm.com/quantum},
 	urldate = {2025-01-12},
 }
 
